--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "productify",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -12,9 +12,22 @@
   },
   "keywords": [],
   "author": "",
+  "type": "module",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BhagyaSubhashini/Productify/issues"
   },
-  "homepage": "https://github.com/BhagyaSubhashini/Productify#readme"
+  "homepage": "https://github.com/BhagyaSubhashini/Productify#readme",
+  "dependencies": {
+    "@arcjet/node": "^1.0.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
