--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "neondatabase": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
